{{$NEXT}}

1.302013_007 2016-01-07 19:30:04-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum Test2 version requirement

1.302013_006 2016-01-06 11:21:48-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Update for Test2 0.000013
    - Delay loading Data::Dumper
    - Test2::API::test2_no_wait(1) when threads/forking are on
    - Fix Test::Tester to use context
    - More downstream dists for testing

1.302013_005 2015-12-29 13:01:32-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Updates for Test2 0.000012
    - Helper for Test::SharedFork

1.302013_004 2015-12-28 13:12:23-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix diag/note bugs from refactor

1.302013_003 2015-12-22 09:41:46-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix bug in details() structure for subtests when the parent is todo

1.302013_002 2015-12-21 13:21:51-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Updates for Test2 0.000010

1.302013_001 2015-12-21 10:07:42-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Switch to using Test2 under the hood
    - Use Dist::Zilla for releases
    - Reformat Changes file

1.302012_004 2015-Nov-16 07:45:11-08:00 PST
    * Fix #600 - done_testing($count)

1.302012_003 2015-Oct-27 00:02:44-08:00 PST
    * Fix typo that called wrong 'try'

1.302012_002 2015-Oct-02 21:57:19-08:00 PST
    * Add version eval to several modules (#605)

1.302012_001 2015-Oct-01 15:47:39-08:00 PST
    * Support for Test::Stream 1.302012

1.302010_001 2015-Sep-29 21:18:38-08:00 PST
    * Support for Test::Stream 1.302010
    * Some upstream package names changed
    * Test::Stream's interface changed, tests needed to change too.

1.302007_004 2015-Jul-27 21:13:39-08:00 PST
    * Work around perlbug 125702

1.302007_003 2015-Jul-24 08:34:46-08:00 PST
    * Remove singleton from closure

1.302007_002 2015-Jul-18 17:38:26-08:00 PST
    * Fix subtest + Test::Stream::Tester

1.302007_001 2015-Jun-24 08:06:00-08:00 PST
    * Tests no longer copy thread/fork checks