@@ -20,7 +20,7 @@ repository.type = git
 
 [Prereqs]
 perl          = 5.006000
-Test2         = 0.000014
+Test2         = 0.000016
 Test::Harness = 2.03
 Scalar::Util  = 1.13
 
