@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Bump minimum Test2 version requirement (to fix downstream)
+
 1.302013_007 2016-01-07 19:30:04-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Bump minimum Test2 version requirement
